[package]
name = "twitch-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
nom = "7.1.3"
tokio = { version = "1.32.0", features = ["macros", "full"] }
websocket-lite = "0.5.2"
